moved list styles into the stylesheet
  * This will remove the stars from the list in non graphical browsers
    and fall back to bullet list.

  * makes it easier to change the style of the feature list

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -242,6 +242,11 @@ p {
   text-align: center;
 }
 
+.features ul li:before {
+  content: '✰';
+  margin-right: 0.6em;
+}
+
 ul {
   width: 220px;
   text-align: left;
