--- a/public/css/main.css
+++ b/public/css/main.css
@@ -199,8 +199,8 @@ textarea {
 }
 
 #container {
-  padding: 80px 0 0 0;
-  width: 600px;
+  padding: 80px 20px 0 20px;
+  max-width: 600px;
   margin: 0 auto;
   text-align: center;
 }
@@ -211,7 +211,6 @@ h1 {
   color: #333;
 }
 
-
 p {
   color: #777;
   font-size: 18px;
@@ -220,11 +219,12 @@ p {
 }
 
 .logo {
-
+  width: 100%;
 }
 
 .slogan {
-  width: 500px;
+  min-width: 90%;
+  max-width: 500px;
   text-align: left;
   margin-bottom: 75px;
 }
@@ -237,7 +237,7 @@ p {
 }
 
 .features {
-  width: 200px;
+  max-width: 220px;
   margin: 0 auto;
   text-align: center;
 }
@@ -248,7 +248,7 @@ p {
 }
 
 ul {
-  width: 220px;
+  width: 100%;
   text-align: left;
   margin: 0;
   padding: 0;
